# wikipedia-dump-extractor

./: .gitignore  Pipfile  README.md  config.ini  pyproject.toml
scripts/: 00_download_last_wikipedia_dump.sh  01_extract_nodes_to_csv.py  02_extract_redirections_to_csv.py  03_extract_infobox_to_csv.py  04_extract_categories_to_csv.py  05_extract_portals_to_csv.py  06_extract_links_to_csv.py  07_alim_duckdb_except_links.py  07_sandbox_sql_duckdb.py  08_alim_duckdb_links.py  09_extract_danker_file.py  09_igraph_analysis.py  09_query_undertale.py  10_compute_danker_rank.sh  10_query_undertale.py  11_alim_danker.py  12_igraph_generate_data.py  XX_query_undertale.py  download_last_wikipedia_dump.sh
tests/: conftest.py  test_article.py  test_dump.py  test_dump_extractor.py  test_site.py
tests/DATA/: enwiki-test-extract.xml.bz2  enwiki-test.xml.bz2  undertale.xml
wikipedia/: __init__.py  __main__.py  dump.py  extract.py  redirection.py
wikipedia/db/: __init__.py  article_category_link.py  article_link.py  article_portal_link.py  category.py  model.py  redirection.py
wikipedia/etl/: article.py  dump.py  extract.py  tools.py
wikipedia_dump_extractor/: dump.py  extract.py
wikipedia_dump_extractor/db/: article.py  article_category_link.py  article_link.py  model.py  portal.py
