[tool.poetry]
name = "wikipedia"
version = "0.1.0"
description = ""
authors = ["Eurydice <orpheus@tartare.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
python-dateutil = "^2.8.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
SQLAlchemy = "^2.0.15"
pandas = "^2.0.2"
mwparserfromhell = "^0.6.5"
joblib = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
