[tool.poetry]
name = "wikipedia"
version = "0.1.0"
description = ""
authors = ["Eurydice <orpheus@tartare.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.2"
python-dateutil = "^2.8.2"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
SQLAlchemy = "^2.0.15"
pandas = "^2.0.2"
mwparserfromhell = "^0.6.5"
joblib = "^1.3.2"
igraph = "^0.11.5"
duckdb = "^0.10.2"
pycairo = "^1.26.0"
matplotlib = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
ipykernel = "^6.26.0"
epc = "^0.0.5"
importmagic = "^0.1.7"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
